--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,16 @@
     <name>00_${project.artifactId}-${project.version}</name>
 
     <url>http://maven.apache.org</url>
-    
+    <developers>
+        <developer>
+            <name>Maciej Adamczewski</name>
+            <email>macadamczewski@gmail.com</email>
+        </developer>
+        <developer>
+            <name>Piotr Czapla</name>
+        </developer>
+    </developers>
+
     <reporting>
         <plugins>
             <plugin>
@@ -100,7 +109,6 @@
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
-
                     </execution>
                     <execution>
                         <id>default-report</id>
@@ -134,6 +142,16 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.10.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>3.1.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <version>3.15.0</version>
             </plugin>
         </plugins>
     </build>
